--- a/anth241_intro.html
+++ b/anth241_intro.html
@@ -13,9 +13,12 @@
 
 <style>
 
-  body {
-    background-color: beige;
-    text-align: center;
+  body, html {
+    font-family: serif;
+    margin: .5vw;
+    text-align: justify;
+    height: 100%;
+    background-color: #F6F6D7;
     }
 
   a:link {
@@ -41,77 +44,134 @@
   }
 
   .topnav{
-    position: sticky;
-    margin-left: .5vw;
-    padding: 1vw;
+    position: fixed;
+    padding: .45vw;
     border: .15vw solid black;
     border-radius: 15%;
-    background-color: transparent;
-    font-size: 1vw;
+    background-color: beige;
+    font-size: 1.2vw;
     text-align: center;
-    width: 6vw;
-    float:left;
+    width: 5.5vw;
+    margin-left: 91.5%
     }
 
   .intro{
     font-size: 1.35vw;
-    margin-left: 2vw;
-    margin-right: 5vw;
+    margin-left: 6vw;
+    margin-right: 7.5vw;
 
     }
 
-  body {
-    font-family: serif;
-    margin: 1.5vw;
-    text-align: justify;
+  .parallax {
+    /* The image used */
+    background-image: url('MaYuanParallax.jpg');
+    /* Full height */
+    height:100px;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 8%;
     }
 
   h1 {
     text-align: center;
     font-size: 3.5vw;
     position: relative;
+    margin-top: 3vh
     }
 
   h2 {
-    font-size: 2.25vw
+    font-size: 2.25vw;
     }
 
   h3 {
-    font-size: 1.75vw
+    font-size: 1.75vw;
     }
+
+  path {
+  fill: transparent;
+  }
+
+  text {
+  fill: black;
+  }
 
 </style>
 
 <body>
   <div class="topnav">
     <nav>
+    <br><a href= "#top">Top</a>
     <br><a href = "#H">Harmony</a>
     <br><a href = "#M">Mirrored</a>
     <br><a href = "#S">Shifts</a>
-  </div><br>
-  <h1>Nature, Culture, People, Art</h1> <!--Title!-->
-  <br>
+    <br><a href = "#E">Seeing</a>
+    <br><a href = "#I">More</a>
+    <br><br>
+  </nav>
+  </div>
+  <div class="parallax">
+    <h1>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Art ⇋ Culture ⇋ Nature ⇋ People</h1> <!--Title!-->
+    <h3 style="font-weight:normal"><center>Kitty Kan</center></h3>
+  </div>
+
   <div class="intro"> <!--INTRO-->
-    <h2>China's Historical & Cultural Relationship with Nature</h2>
+    <h2 id="top">China's Historical & Cultural Relationship with Nature</h2>
     <h3 id="H">In Harmony with Nature</h3>
       <p>
         For most of history, nature has played a vital role in shaping Chinese culture. Though difficult to imagine nowadays given the nation's infamous pollution, various aspects of the Chinese tradition and way of life, from agriculture and politics to philosophy and art, are rooted in the connection people had with nature. This harmonious relationship stems from the concept of 天人合一 (<i>tian ren he yi</i>), an old saying that roughly translates to "nature and humans joining together as one." As indicated by many early writings and artworks, it was under this premise that the Chinese considered themselves to be a part of the natural world, and thus behaved according to the laws of nature (Hou). This concept and how it has permeated into Chinese society are manifest in traditional landscape paintings, 山水画 (<i>shan shui hua</i>), from medieval dynasties.  This is particularly evident in the way natural elements, such as rivers and mountains, are portrayed as these monumental and awesome subjects of the composition instead of being relegated to the background, as is common in Western art. In contrast, people are seldom included in these paintings; and when they are, they're depicted as these minuscule beings that make up the larger, overall landscape. This juxtaposition emphasizes the idea that people are a part of nature and adds a humbling effect that imbues a sense of reverence for nature. In this way, depictions of the smallness and ephemerality of human beings relative to the immensity and permanence of nature through these paintings make our problems shrink, thus evoking a sense of tranquility often associated with the natural world. Consequently, 山水画 are also reflective of this tendency, common among Chinese literati, to turn to nature for physical and mental refuge especially in the wake of the chaos of dynastic collapse (“Landscape Painting in Chinese Art”).
       </p>
-      <br><br>
+      <br>
     <h3 id="M">Reflection & Connection</h3>
       <p>
         In addition to landscapes, traditional paintings of more specific elements of nature, ones in which medieval literati have attached spiritual and symbolic meaning to, further conveys the reverence the Chinese had for the natural world. Mountains, for example, held sacred power since ancient times and was a representation of nature's vital energy (<i>qi 气</i>); this sense of power mountains have been attributed with further establish a sense of respect for such natural entities. Moreover, by "imbu[ing] a variety of plants and flowers with auspicious meaning and scholarly virtues" (“Contemplating Nature: Chinese and Korean Botanical Paintings”), poets and artists have created a way for people to see themselves reflected in nature and allow them to connect on a more personal level.
-      <br></p>
-      For example, the plum blossom, orchid, bamboo, and chrysanthemum have been associated with "Confucian virtues of loyalty, purity, modesty, and dignity" and are thus known as "Four Gentlemen" (四君子). Likewise, the "Three Friends of Winter" (岁寒三友) refer to the pine, bamboo, and Chinese flowering plum blossom. To Chinese literati, the ability of these plants to continue growing despite the harsh winter were inspiring and thus became an "example of resilience and perseverance in the face of adversity" (“Twin Purities—Bamboo and Plum Blossom Paintings at Suzhou Museum”, “Contemplating Nature: Chinese and Korean Botanical Paintings”). In this way, scholars were able to relate to these plants as they came to represent the "integrity of the cultivated gentleman scholar who maintains his moral rectitude even when surrounded by adversity" (“Contemplating Nature: Chinese and Korean Botanical Paintings”). Consequently, the symbolism attributed to these elements of nature elevated their status and were viewed in the highest regard. Through this added sense of personal connection and respect, the symbolism and the representation of these natural elements in traditional paintings further deepened the harmonious relationship between nature and the Chinese people.
-      <br><br>
+      </p>
+      <p>
+        For example, the plum blossom, orchid, bamboo, and chrysanthemum have been associated with "Confucian virtues of loyalty, purity, modesty, and dignity" and are thus known as "Four Gentlemen" (四君子). Likewise, the "Three Friends of Winter" (岁寒三友) refer to the pine, bamboo, and Chinese flowering plum blossom. To Chinese literati, the ability of these plants to continue growing despite the harsh winter were inspiring and thus became an "example of resilience and perseverance in the face of adversity" (“Twin Purities—Bamboo and Plum Blossom Paintings at Suzhou Museum”, “Contemplating Nature: Chinese and Korean Botanical Paintings”). In this way, scholars were able to relate to these plants as they came to represent the "integrity of the cultivated gentleman scholar who maintains his moral rectitude even when surrounded by adversity" (“Contemplating Nature: Chinese and Korean Botanical Paintings”). Consequently, the symbolism attributed to these elements of nature elevated their status and were viewed in the highest regard. Through this added sense of personal connection and respect, the symbolism and the representation of these natural elements in traditional paintings further deepened the harmonious relationship between nature and the Chinese people.
+      </p>
+      <br>
     <h3 id="S">Shifting Views</h3>
       <p>
         Essentially, this harmonious relationship between people and nature guided Chinese thought and way of life until the birth of the term 自然 (<i>ziran</i>) (<i>meaning nature/natural</i>) in the 20th century, which established a divide that "mirrored the Western notion of nature as a world separate from human society" (Brunner 4). This concept, in conjunction with Mao Zedong's infamous "War on Nature," shattered previous notions of 天人合一 and reshaped Chinese relationships to the land. Under Mao's leadership, nature was transformed into an enemy must be conquered to clear the path to China's progress (Shapiro). While the war on nature ended with Mao's death, the human-nature divide he had advocated perpetuated into the 21st century with the adoption of capitalism and embrace of consumerism by China's paramount leader Deng Xiaoping in the 1980s. This ushered in a period of rapid industrial and economic growth in China which came at the expense of continued extreme environmental degradation (Brunner 4).
       </p>
+      <p>
+        In this respect, several contemporary Chinese artists have come to the forefront in the call for action. Contrary to their predecessors from medieval China, who favored nonaction and retreating to nature in times of chaos, artists Cai Guoqiang, Shang Yang, and Ji Yunfei (among many others) are responding to the changing world and actively trying to reshape it. Under this premise, they have created work that  referenced the tradition of 山水画 (though through a many different mediums) in effort to remind people of China's long-standing cultural ties with nature. In this way, contemporary artists are seeking to raise awareness and calling for change as environmental issues exacerbate by appealing to the Chinese heritage. Thus emphasizing that environmental damage extends beyond the unsustainable destruction of nature, causing the Chinese to forget their history and culture. In this regard, contemporary artists, much like their medieval counterparts, are provoking thought about the natural world and reflecting on the changing relationship (the growing disconnect) between nature and Chinese society.
+      </p>
+      <br>
+    <h3 id="E">Through the Artist's Eyes</h3>
+      <p>
+        In addition to reflecting the changing human-nature relationship, both traditional and contemporary artwork also taught people how to see. As argued by Matthew Turner in his writing on "Classical Chinese Landscape Painting and the Aesthetic Appreciation of Nature", the smaller details emphasized in 山水画, such as the leaves or texture of bark on different trees, informs people of nature's diversity and calls for them to pay further attention. In this way, art can guide the way people perceive, and even appreciate, the world around them:
+      </p><br>
+      <p style="font-style: italic; margin-left: 10vw; margin-right: 10vw">
+        "Instead of seeing the tree as we normally see it...We can then see trees themselves as dynamic, living entities and come to appreciate them aesthetically...These characteristic marks of what is aesthetically valuable in actual trees serve as a model for looking at actual trees”
+        <span style="font-style: normal;"> (Turner 117)</span>
+      </p><br>
+      <p>
+        Over time, this power of art has remained unchanged. In depicting the world through their eyes, contemporary artists and the work they create continue to play an important role in shaping how their audience (on a global and digital level) sees and understands the world (both its beauty and its problems).
+      </p>
+  </div><br><br>
+  <div class="intro">
+    <h2 id="I">About the Project</h2>
+    <p>
+      As you can see, art has always provided people with the power of expression and, in this way, has come to reflect various aspects of the societies from which they are produced. With regard to China, the deep cultural ties the nation has and still has with the natural world are best reflected/can be observed through traditional and contemporary art. In this way, changes in artistic representations of nature act as indicators of the people's perpetually shifting relationship with and attitudes toward nature.
+    </p>
+    <p>
+      Consequently, this project will examine the changes in the portrayal of nature in Chinese art over time and how they reflect the relationship people have with nature. However, given the expanse of China's history and geography, it was necessary to narrow the scope and to more specific time periods. In this case, I decided to focus on comparing the artworks from medieval and contemporary China (with greater emphasis on the latter time period).
+    </p>
+    <p style="font-weight: bold; font-size: 1.45vw;">
+      Now we get to the fun part!
+    </p>
+    <p>
+      Back on the main page, you will find an incredibly long image. This was intended to simulate the effect of 山水画 and tell the story of the changing human-nature relationship in China as told by the work of various contemporary artists and the social-environmental concerns they addressed. As you scroll, you will find numbered circles on either the top or the bottom of the image. Be sure to click on them as they will provide further descriptions of the contemporary artwork and how the drawings rendered on my digital scroll relate!
+    </p>
   </div>
-
-
+  <br><br><br><br>
   <div class="bottomnav">
-    <a href="ANTH241 Test.html">Back to Main</a>
+    <a href="ANTH241 Test.html">Back to Main</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="top">Top</a>
+
   </div>
+  <br><br><br>
 </body>
