--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   </title>
 </head>
 
-<body>
-  <a href="ANTH231 Test.html"> This is the Scroll</a>
+<body style="background-color: olive">
+  <div>
+  <a href="ANTH241 Test.html"> This is the Scroll</a>
+  <div>
 </body>
 
 </html>
