--- a/anth241_intro.html
+++ b/anth241_intro.html
@@ -108,7 +108,7 @@
       }
 
     .panel {
-      padding: 0 18px;
+      padding: 0 18px;a
       display: none;
       background-color: transparent;
       overflow: hidden;
@@ -197,31 +197,51 @@
          <br>
       <p>Augustin, Birgitta. “Daoism and Daoist Art.” <i>In Heilbrunn Timeline of Art History.</i> New York: The Metropolitan Museum of Art, 2000–. u>http://www.metmuseum.org/toah/hd/daoi/hd_daoi.htm</u> (December 2011)</p>
         <br>
+        <p>Brunner, Betsy. (2017). Contemporary Environmental art in China: Portraying Progress, Politics, and Ecosystems. Environmental Communication. 1-12. 10.1080/17524032.2016.1269822. </p>
+        <br>
       <p>“Contemplating Nature: Chinese and Korean Botanical Paintings.” <i>East Asian Art Program at Harvard University</i>, 2015,	<u>eaa.fas.harvard.edu/contemplating-nature-chinese-and-korean-botanical-paintings.</u></p>
         <br>
+        <p>cunytv75. “Ancient Art Links - Chinese Landscape Paintings at the Metropolitan Museum (大都会博物馆中国山水画).” <i>Youtube</i>, 8 Jan. 2018, <u>https://www.youtube.com/watch?v=TIt0wBUdY5E</u></p>
+      <br>
       <p>Department of Asian Art. “Landscape Painting in Chinese Art.” <i>In Heilbrunn Timeline of Art History.</i>. New York: The Metropolitan Museum of Art, 2000–. <u>http://www.metmuseum.org/toah/hd/clpg/hd_clpg.htm</u> (October 2004)</p>
         <br>
       <p>Department of Asian Art. “Nature in Chinese Culture.” <i>In Heilbrunn Timeline of Art History.</i> New York: The
 	       Metropolitan Museum of Art, 2000–. http://www.metmuseum.org/toah/hd/cnat/hd_cnat.htm (October 2004)</p>
         <br>
+        <p>Department of Asian Art. “Traditional Chinese Painting in the Twentieth Century.” <i>In Heilbrunn Timeline of Art History</i>. New York: The Metropolitan Museum of Art, 2000–. http://www.metmuseum.org/toah/hd/cptg/hd_cptg.htm (October 2004)</p>
+        <br>
+        <p>Duggan, Jennifer. “China's Environmental Woes Inspire Art | Jennifer Duggan.” <i>The Guardian</i>, Guardian News and Media, 15 Aug. 2014, <u>www.theguardian.com/environment/chinas-choice/2014/aug/15/chinas-environmental-problems-cai-guo-qiang.</u>
+        <br>
       <p>“East Asian Buddhist Art.” <i>East Asian Art Program at Harvard University</i>, <u>eaa.fas.harvard.edu/east-asian-buddhist-art.</u></p>
+        <br>
+        <p>Guo, Bouyu. “5 Exciting Contemporary Chinese Artists That Examine Our Relationship with Nature.” <i>Art Radar</i>, 8 May 2018, 		artradarjournal.com/2018/08/05/5-exciting-contemporary-chinese-artists-that-examine-our-relationship-with-nature/. </p>
+        <br>
+        <p>Jing, Yang. “Rising Ecological Awareness in Chinese Contemporary Art: An Analysis of the Cultural EnvironmentTahiti.” Tahiti, Jan 2016, 			tahiti.fi/01-2016/tieteelliset-artikkelit/rising-ecological-awareness-in-chinese-contemporary-art-an-analysis-of-the-cultural-environment/.</p>
         <br>
       <p>Kim, Hae Yeun. “East Asian Cultural Exchange in Tiger and Dragon Paintings.” <i>In Heilbrunn Timeline of Art History.</i>. New York: The Metropolitan Museum of Art, 2000–. <u>http://www.metmuseum.org/toah/hd/tidra/hd_tidra.htm</u> (October 2016)</p>
         <br>
+        <p>Langfitt, Frank. “China's Pollution Crisis Inspires An Unsettling Art Exhibit.” <i>NPR</i>, NPR, 23 Aug. 2014, www.npr.org/sections/parallels/2014/08/21/342189261/chinas-pollution-crisis-inspires-an-unsettling-art-exhibit.</p>
+      <br>
       <p>“Literati: Scholars and Scholars' Objects in Chinese and Korean Paintings.” <i>East Asian Art Program at Harvard University</i>, 2016, <u>eaa.fas.harvard.edu/literati-scholars-and-scholars’-objects-chinese-and-korean-paintings</u>.</p>
         <br>
       <p>“Mountains and Water: Landscape Paintings from China and Korea.”<i>East Asian Art Program at Harvard University</i>, <u>eaa.fas.harvard.edu/gallery-2600-east-asian-art.</u></p>
         <br>
+    <p>Schell, Orville. “A Chinese Artist Confronts Environmental Disaster.” <i>The New Yorker</i>, The New Yorker, 2 Oct. 2017, www.newyorker.com/culture/cultural-comment/chinese-artist-confronts-environmental-disaster.</u></p>
+      <br>
+      <p>The Global Fine Art Awards. “Xu Bing: Phoenix.” <i>Youtube</i>, 24 Oct. 2014, <u>https://www.youtube.com/watch?v=0KcR9SwrVm4&feature=youtu.be </u></p>
+      <br>
       <p>“‘The Perfection of Nature’, ‘Identification with Nature.’” <i>How to Read Chinese Paintings</i>, by Maxwell K. Hearn, Metropolitan Museum of Art, 2008, pp. 68–74.</p>
         <br>
       <p>Turner, Matthew. “Classical Chinese Landscape Painting and the Aesthetic Appreciation of Nature.” <i>The Journal of Aesthetic Education</i>, vol. 43, no. 1, 2009, pp. 106–121. JSTOR, www.jstor.org/stable/40263708. Accessed 28 Feb. 2020.</p>
+        <br>
+      <p>“【评论】王雪芹：偶然与必然：被选择的董其昌.” 尚扬官方网站 , 27 Apr. 2011, shangyang.artron.net/news_detail_164070.</p>
         <br>
       <p>Wenhui Hou. “Reflections on Chinese Traditional Ideas of Nature.” <i>Environmental History</i>, vol. 2, no. 4, 1997, pp. 482–493. <i>JSTOR</i>,<u>www.jstor.org/stable/3985610.</u> Accessed 28 Feb. 2020.</p>
         <br>
       </div>
   <br><br><br><br>
   <div class="bottomnav">
-    <a href="ANTH241 Test.html">Back to Main</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="ANTH241 Proj.html">Back to Main</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <a href="top">Top</a>
 
   </div>
