--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body style="background-color: olive">
   <div>
-  <a href="ANTH241 Test.html"> This is the Scroll</a>
+  <a href="ANTH241 Proj.html"> This is the Scroll</a>
   <div>
 </body>
 
