--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
     index
   </title>
 </head>
+<style>
+</style>
 
-<body style="background-color: olive">
+<body>
+
   <div>
   <a href="ANTH241 Proj.html"> This is the Scroll</a>
   <div>
-</body>
+
+  </body>
 
 </html>
