--- a/anth241_intro.html
+++ b/anth241_intro.html
@@ -300,9 +300,9 @@
       Now we get to the fun part!
     </p>
     <p>
-      Back on the main page, you will find an incredibly long image. This was intended to simulate the effect of 山水画 and tell the story of the changing human-nature relationship in China as told by the work of various contemporary artists and the social-environmental concerns they addressed. As you scroll, you will find numbered circles on either the top or the bottom of the image. Be sure to click on them as they will provide further descriptions of the contemporary artwork and how the drawings rendered on my digital scroll relate!
+      Back on the main page, you will find an incredibly long image. This was intended to simulate the effect of 山水画 and tell the story of the changing human-nature relationship in China as told by the work of various contemporary artists and the social-environmental concerns they addressed. As you scroll, you will find numbered circles on the bottom of the image. Be sure to <strong><u>click</u></strong> on them as they will provide further descriptions of the contemporary artwork and how the drawings rendered on my digital scroll relate!
       <br><br>
-      Note: In some cases, you will need to scroll to read the whole text when hovering over the black circles/ovals on the bottom. If it is difficult to scroll in the pop-up, try shifting the page to the left...
+      Note: Unfortunately this site has not been adequately adapted for mobile devices, so it would be best to view on the computer. Sorry for the incovenience.
     </p>
   </div>
   <br><br>
