--- a/ANTH241 Proj.html
+++ b/ANTH241 Proj.html
@@ -37,6 +37,27 @@ or alternatively, could also make image maps...nahhh-->
     margin-left:.5vw;
     }
 
+    @media screen and (max-width: 768px) {
+      .about {
+        font-size: 2.5vw;
+        margin-bottom: 2vh;
+        }
+      }
+
+      @media screen and (max-width: 375px) {
+        .about {
+          font-size: 4.5vw;
+          margin-bottom: 2vh;
+          }
+        }
+
+        @media screen and (max-width: 360px) {
+          .about {
+            font-size: 6.5vw;
+            margin-bottom: 2vh;
+            }
+          }
+
   a:link {
     color: black;
     text-decoration: none;
@@ -247,11 +268,11 @@ or alternatively, could also make image maps...nahhh-->
 
 <body>
   <div class="about">
-    <a href="anth241_intro.html" class="about"> ABOUT </a>
+    <a href="anth241_intro.html" class="about" style="color:red"> ABOUT <span style="font-size:1vh; color: gray">(Plese read first, especially the END)</a>
   </div><br>
   <div class="scroll">
   <!--MAKE THIS SCROLL LONGER< AND THINNER!!! and no scroll y-axis-->
-    <img src="test1.jpg">
+    <img src="test1.jpg" height="auto">
   </div>
   <div class="about">
     Scroll This Way -->
