--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 
   <div>
   <a href="ANTH241 Proj.html"> This is the Scroll</a>
+  <br>
+  <a href="MapPageSkeleton.html">MAPS THESIS<a>
   <div>
 
   </body>
